# calendar_dash

./: .gitignore  Cargo.toml  README.md
src/: calendar.rs  gui.rs  main.rs  settings.rs
src/calendar/: mock_data.rs  mod.rs
src/server/: mod.rs
static/: calendar.js  main.css  main.js  manifest.json
templates/: index.html
