[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.7", features = ["ws"] }
gcp_auth = "0.7.3"
lazy_static = "1.4.0"
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.10", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
urlencoding = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tera = { version = "1", default-features = false }
toml = "0.5.9"
